--- a/2/style.css
+++ b/2/style.css
@@ -30,22 +30,62 @@ body
 
 #topbar
 {
-    
+    background-color: #128870;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    height: 170px;
+}
+
+#topbarL
+{
+ float: left;
+ padding: 20px;
+ width: 138px;
+ text-align: center;
+ border-right: 2px dotted #cccccc;
+}
+
+#topbarR
+{
+float: left;
+padding: 20px;
+width: 760px;
+font-size: 16px;
+text-align: justify;
 }
 
 #sidebar
 {
-    
+    float: left;
+    width: 148px;
+    min-height: 620px;
+    padding: 20px;
+    background-color: lightgray;
+    text-align: center;
+    font-size: 18px;
+    border-right: 2px dotted #666666;
 }
 
 #content
 {
-    
+    float: left;
+    padding: 40px;
+    width: 730px;
+    background-color: #dedede;
+    min-height: 580px;
+    text-align: justify;
+
 }
 
 #footer
 {
-    
+    clear: both;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-size: 18px;
 }
 
 .option
@@ -63,4 +103,34 @@ body
 {
     background-color: #000000;
     cursor: pointer;
+}
+
+.optionL
+{
+font-size: 18px;
+height: 25px;
+padding: 10px;
+border-bottom: 2px dotted #444444;
+}
+
+.optionL:hover
+{
+background-color: #f36742;
+color: white;
+cursor: pointer;
+}
+
+.bigtitle
+{
+    font-size: 32px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+.dottedline
+{
+    height: 5px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border-bottom: 2px dotted #444444;
 }
